 New command 'au' to speak on the admin channel. Requires Earl or above.