@@ -32,7 +32,7 @@ class User
 
   attr_accessor :memos
 
-  attr_accessor :fishing, :community_service
+  attr_accessor :fishing, :community_service, :rally
   attr_accessor :tripping, :bile, :vomited_on, :drug_strength, :prayer_status, :alcohol_units, :last_drink
 
   attr_accessor :id, :handler, :ip_address, :charset, :show_timestamps, :timestamp_format
@@ -302,6 +302,10 @@ class User
 
   def cname
     "#{RANK_COLOUR[rank]}#{name}^n"
+  end
+  
+  def hisher
+    @gender == :male ? "his" : "her"
   end
   
   def examine
