@@ -1,1 +1,5 @@
- New command 'au' to speak on the admin channel. Requires Earl or above.
+Dragon World is hosting a stage of the World Rally Championships!
+Type ^Lhelp rally^n for instructions on how to play.
+
+> SockEyE tells you ‘also advertise the talker meet in changes’           
+> SockEyE tells you ‘8th May in Coventry from 2pm onwards’                
